# animation-retargeting

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindFbxSdk.cmake  GccClang.cmake  Msvc.cmake
include/: animation_retargeting.hpp
testing/: CMakeLists.txt
testing/include/: animated_character.hpp  animation.hpp  app.hpp  fbx.hpp  glfw.hpp  mesh.hpp  model.hpp  player_view.hpp  scene.hpp  shader.hpp  skeleton.hpp  texture.hpp  util.hpp
testing/include/glad/: glad.h
testing/source/: glad.c  main.cpp
